store/src/styles/sections/testimonials.scss
.hern-testimonials__container {
   max-width: 1440px;
   margin: 0 auto;
   padding: 64px 0;
}
.hern-testimonials {
   background-color: rgba(0, 0, 0, 0.8);
}
.hern-testimonials__header {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
   font-size: 48px;
   line-height: 58px;
   text-align: center;
   letter-spacing: 0.02em;
   color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 72px;
   max-width: 1024px;
   margin: 0 auto;
   > span {
      display: block;
      width: 200px;
      border-radius: 12px;
      height: 12px;
      margin-bottom: 24px;
   }
}
.hern-testimonials__wrapper {
   max-width: 800px;
   margin: 0 auto;
   padding: 130px 0;
   display: flex;
   position: relative;
   > span {
      position: absolute;
      top: 45%;
      padding: 12px;
      display: block;
      background-color: var(--hern-accent);
      cursor: pointer;
   }
   .hern-testimonials__arrow-left {
      left: -56px;
   }
   .hern-testimonials__arrow-right {
      right: -56px;
   }
}
.hern-testimonials__image {
   height: auto;
   width: 120px;
   > img {
      width: 100%;
      height: 100%;
   }
}
.hern-testimonials__content {
   background-color: #f4f4f4;
   padding: 32px 48px;
   position: relative;
   width: 100%;
   p {
      color: #777;
      font-style: italic;
      font-size: 16px;
      letter-spacing: 0.64px;
      line-height: 28px;
      margin-bottom: 0;
   }

   > h4 {
      color: #222;
      font-size: 14px;
      font-weight: 600;
      letter-spacing: 0.98px;
      text-transform: uppercase;
      > span {
         color: #777;
         display: inline-block;
         font-family: 'Lato', sans-serif;
         font-size: 14px;
         letter-spacing: 0.98px;
         text-transform: capitalize;
      }
   }

   > span {
      background: var(--hern-accent);
      position: absolute;
      left: -20px;
      top: 35%;
      padding: 16px;
      border-radius: 50%;
   }
}

@media only screen and (max-width: 900px) {
   .hern-testimonials__container {
      padding-bottom: 45px;
   }
   .hern-testimonials--without-image {
      min-height: 491px !important;
   }
   .hern-testimonials__header {
      font-size: 28px;
      line-height: 34px;
      padding-bottom: 10px;
      > span {
         width: 100px;
         height: 8px;
      }
      > h6 {
         font-size: 26px !important;
         line-height: 30px !important;
      }
   }
   .hern-testimonials--without-image__reviews {
      padding: 0px 17px;
   }
   .hern-testimonials--without-image__review__content {
      font-size: 16px !important;
      line-height: 20px !important;
   }
   .hern-testimonials--without-image__review__user {
      font-size: 18px;
      line-height: 32px;
   }
   .hern-testimonials__wrapper {
      max-width: 300px;
      padding: 64px 0;
      display: block;
   }
   .hern-testimonials__content {
      padding: 16px 16px 16px 32px;
      > p {
         margin-bottom: 16px;
         line-height: 20px;
      }
   }
   .hern-testimonials__image {
      max-width: 120px;
      width: 120px;
      height: auto;
   }
}

/**Testimonials without image */
.hern-testimonials--without-image {
   min-height: 600px;
   background-repeat: no-repeat;
   background-size: contain;
}
.hern-testimonials--without-image__reviews {
   position: relative;
   max-width: 1140px;
   margin: 0 auto;
}
.hern-testimonials--without-image__review {
   border-width: 6px;
   border-style: solid;
   box-sizing: border-box;
   border-radius: 20px;
   padding: 32px;
   position: relative;
}
.hern-testimonials--without-image__review__quote {
   position: absolute;
   right: 0px;
   display: block;
   top: 120px;
}
.hern-testimonials--without-image__review__content {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
   line-height: 32px;
   letter-spacing: 0.02em;
   color: #000000;
}
.hern-testimonials--without-image__review__user {
   font-family: 'Inter';
   font-style: italic;
   font-weight: 500;
   font-size: 28px;
   line-height: 32px;
   letter-spacing: 0.02em;
   color: #000000;
   margin-top: 24px;
}

.hern-testimonials__container .slick-track .slick-slide > div {
   padding: 0px 15px;
}

.hern-testimonials__container .slick-track {
   display: flex;
   align-items: center;
}

.hern-testimonials--without-image-center-aligned .hern-testimonials__header {
   padding-bottom: 20px;
   > h6 {
      font-weight: 500;
      font-size: 36px;
      line-height: 44px;
   }
}

// Navigation Dots Style
.hern-testimonials__container .ant-carousel .slick-dots {
   transform: translateY(180%);
   bottom: 0px;
}
.hern-testimonials__container .slick-dots.slick-dots-bottom li {
   width: 14px !important;
   height: 14px;
   border-radius: 50%;
   @media screen and (max-width: 567px) {
      width: 10px !important;
      height: 10px;
   }
}
.hern-testimonials__container .slick-dots.slick-dots-bottom li button {
   width: 100%;
   height: 100%;
   border-radius: 50%;
}
.hern-testimonials__container
   .slick-dots.slick-dots-bottom.green-dots
   li:not(.slick-active)
   button {
   background-color: #aee57a;
}
.hern-testimonials__container
   .slick-dots.slick-dots-bottom.pink-dots
   li:not(.slick-active)
   button {
   background-color: rgba(255, 181, 161, 0.25);
}
.hern-testimonials__container
   .slick-dots.slick-dots-bottom.green-dots
   li.slick-active
   button {
   background-color: #7cc144;
}
.hern-testimonials__container
   .slick-dots.slick-dots-bottom.pink-dots
   li.slick-active
   button {
   background-color: #fe8b76;
}

@media only screen and (min-width: 400px) {
   .hern-testimonials__wrapper {
      max-width: 200px;
      padding: 64px 0;
      display: block;
   }
   .hern-testimonials__content {
      padding: 16px 16px 16px 32px;
      > p {
         margin-bottom: 16px;
         line-height: 20px;
      }
   }
   .hern-testimonials__image {
      max-width: 120px;
      width: 120px;
      height: auto;
   }
}

